# comfyui-maxCSV

./: README.md
comfyui-maxCSV-nodes/: LICENSE  README.md  __init__.py  pyproject.toml
comfyui-maxCSV-nodes/CSV/: conditions-prompts.csv  image_redo_list.csv  image_redo_list.txt  image_redo_list_oops.csv
comfyui-maxCSV-nodes/CSV/example/: example.csv
comfyui-maxCSV-nodes/nodes/: EZ_Prompt_Loader.py  EZ_Tag_Loader.py  EZ_Testing.py  EZ_Text_Utils.py
comfyui-maxCSV-nodes/web/: EZ_CSV_Loader.js  EZ_Prompt_Loader.js  EZ_Tag_Loader.js  EZ_Text_Concat.js
comfyui-maxcsv-nodes/: README.md  __init__.py  desktop.ini
comfyui-maxcsv-nodes/CSV/: PI-prompts.csv  batch_input.csv  cover-type-prompts.csv
comfyui-maxcsv-nodes/nodes/: CSVNODEEXAMPLE  MaxCSV_Loader.py  MaxCSV_Loader_Dynamic.py  MaxPrompt_Loader.py  MaxTag_Loader.py  MaxTesting.py  MaxText_Utils.py
comfyui-maxcsv-nodes/web/: MaxCSV_Loader.js  MaxPrompt_Loader.js  MaxTag_Loader.js  MaxText_Concat.js  max_csv_loader.html  max_csv_loader.js
